--- a/template/layout-front.phtml
+++ b/template/layout-front.phtml
@@ -107,13 +107,13 @@ $breadcrumbs = $this->breadcrumb(
                 <div class="col-md-3">
                     <?php if ($module == 'system') { ?>
                         <h1>
-                            <a href="<?php echo Pi::url($this->url('home')); ?>" title="<?php echo _escape($sitename); ?>">
+                            <a href="<?php echo Pi::url($this->url('home')); ?>/" title="<?php echo _escape($sitename); ?>">
                                 <?php echo _escape($sitename); ?>
                             </a>
                         </h1>
                     <?php } else { ?>
                         <h2>
-                            <a href="<?php echo Pi::url($this->url('home')); ?>" title="<?php echo _escape($sitename); ?>">
+                            <a href="<?php echo Pi::url($this->url('home')); ?>/" title="<?php echo _escape($sitename); ?>">
                                 <?php echo _escape($sitename); ?>
                             </a>
                         </h2>
@@ -139,7 +139,7 @@ $breadcrumbs = $this->breadcrumb(
                     </div>
                 </div>
                 <div class="col-md-2 pi-header-btn">
-                    <a itemprop="url" class="btn btn-primary" href="<?php echo Pi::url($this->url('home')); ?>event/manage" title="ثبت و مدیریت سفر">
+                    <a itemprop="url" class="btn btn-primary" href="<?php echo Pi::url($this->url('home')); ?>/event/manage" title="ثبت و مدیریت سفر">
                         <span itemprop="name">ثبت و مدیریت سفر</span>
                     </a>
                 </div>
@@ -376,29 +376,29 @@ $breadcrumbs = $this->breadcrumb(
                     <div class="col-md-3 col-sm-3 col-xs-12">
                         <h3>مدت اجرای سفرها</h3>
                         <ul class="list-unstyled">
-                            <li><a title="تورهای یک روزه" href="<?php echo Pi::url($this->url('home')); ?>event/one-day-tours"><i class="fa fa-angle-left"></i> تورهای یک روزه</a></li>
-                            <li><a title="تورهای چند روزه" href="<?php echo Pi::url($this->url('home')); ?>event/mult-day-tours"><i class="fa fa-angle-left"></i> تورهای چند روزه</a></li>
-                            <li><a title="تورهای همه روزه" href="<?php echo Pi::url($this->url('home')); ?>event/every-day"><i class="fa fa-angle-left"></i> تورهای همه روزه</a></li>
+                            <li><a title="تورهای یک روزه" href="<?php echo Pi::url($this->url('home')); ?>/event/one-day-tours"><i class="fa fa-angle-left"></i> تورهای یک روزه</a></li>
+                            <li><a title="تورهای چند روزه" href="<?php echo Pi::url($this->url('home')); ?>/event/mult-day-tours"><i class="fa fa-angle-left"></i> تورهای چند روزه</a></li>
+                            <li><a title="تورهای همه روزه" href="<?php echo Pi::url($this->url('home')); ?>/event/every-day"><i class="fa fa-angle-left"></i> تورهای همه روزه</a></li>
                         </ul>
                     </div>
                     <div class="col-md-3 col-sm-3 col-xs-12">
                         <h3>طبقه‌بندی سفرها</h3>
                         <ul class="list-unstyled">
-                            <li><a title="طبیعت گردی" href="<?php echo Pi::url($this->url('home')); ?>event/ecotourism"><i class="fa fa-angle-left"></i> طبیعت گردی</a></li>
-                            <li><a title="تاریخی" href="<?php echo Pi::url($this->url('home')); ?>event/historical"><i class="fa fa-angle-left"></i> تاریخی</a></li>
-                            <li><a title="کوهنوردی" href="<?php echo Pi::url($this->url('home')); ?>event/mountaineering"><i class="fa fa-angle-left"></i> کوهنوردی</a></li>
-                            <li><a title="صحرانوردی" href="<?php echo Pi::url($this->url('home')); ?>event/cross-country"><i class="fa fa-angle-left"></i> صحرانوردی</a></li>
-                            <li><a title="عکاسی" href="<?php echo Pi::url($this->url('home')); ?>event/photography"><i class="fa fa-angle-left"></i> عکاسی</a></li>
-                            <li><a title="رصد" href="<?php echo Pi::url($this->url('home')); ?>event/observation"><i class="fa fa-angle-left"></i> رصد</a></li>
+                            <li><a title="طبیعت گردی" href="<?php echo Pi::url($this->url('home')); ?>/event/ecotourism"><i class="fa fa-angle-left"></i> طبیعت گردی</a></li>
+                            <li><a title="تاریخی" href="<?php echo Pi::url($this->url('home')); ?>/event/historical"><i class="fa fa-angle-left"></i> تاریخی</a></li>
+                            <li><a title="کوهنوردی" href="<?php echo Pi::url($this->url('home')); ?>/event/mountaineering"><i class="fa fa-angle-left"></i> کوهنوردی</a></li>
+                            <li><a title="صحرانوردی" href="<?php echo Pi::url($this->url('home')); ?>/event/cross-country"><i class="fa fa-angle-left"></i> صحرانوردی</a></li>
+                            <li><a title="عکاسی" href="<?php echo Pi::url($this->url('home')); ?>/event/photography"><i class="fa fa-angle-left"></i> عکاسی</a></li>
+                            <li><a title="رصد" href="<?php echo Pi::url($this->url('home')); ?>/event/observation"><i class="fa fa-angle-left"></i> رصد</a></li>
                         </ul>
                     </div>
                     <div class="col-md-3 col-sm-3 col-xs-12">
                         <h3>نحوه اجرای سفرها</h3>
                         <ul class="list-unstyled">
-                            <li><a title="انفرادی" href="<?php echo Pi::url($this->url('home')); ?>event/single"><i class="fa fa-angle-left"></i> انفرادی</a></li>
-                            <li><a title="دوستانه" href="<?php echo Pi::url($this->url('home')); ?>event/friendly"><i class="fa fa-angle-left"></i> دوستانه</a></li>
-                            <li><a title="خانوادگی" href="<?php echo Pi::url($this->url('home')); ?>event/familial"><i class="fa fa-angle-left"></i> خانوادگی</a></li>
-                            <li><a title="کودکان" href="<?php echo Pi::url($this->url('home')); ?>event/children"><i class="fa fa-angle-left"></i> کودکان</a></li>
+                            <li><a title="انفرادی" href="<?php echo Pi::url($this->url('home')); ?>/event/single"><i class="fa fa-angle-left"></i> انفرادی</a></li>
+                            <li><a title="دوستانه" href="<?php echo Pi::url($this->url('home')); ?>/event/friendly"><i class="fa fa-angle-left"></i> دوستانه</a></li>
+                            <li><a title="خانوادگی" href="<?php echo Pi::url($this->url('home')); ?>/event/familial"><i class="fa fa-angle-left"></i> خانوادگی</a></li>
+                            <li><a title="کودکان" href="<?php echo Pi::url($this->url('home')); ?>/event/children"><i class="fa fa-angle-left"></i> کودکان</a></li>
                         </ul>
                     </div>
                     <div class="col-md-3 col-sm-3 col-xs-12">
@@ -418,7 +418,7 @@ $breadcrumbs = $this->breadcrumb(
     <div class="pi-footer-copyright clearfix">
         <div class="container">
             <div class="row">
-                <div class="text-left col-md-6" data-rel="license">تمام حقوق مطالب برای وب سایت <a href="<?php echo Pi::url($this->url('home')); ?>" title="<?php echo _escape($sitename); ?>"><?php echo _escape($sitename); ?></a> محفوظ است.
+                <div class="text-left col-md-6" data-rel="license">تمام حقوق مطالب برای وب سایت <a href="<?php echo Pi::url($this->url('home')); ?>/" title="<?php echo _escape($sitename); ?>"><?php echo _escape($sitename); ?></a> محفوظ است.
                 </div>
                 <div class="text-right col-md-6" data-rel="license">طراحی و توسعه <a title="فراگسترش" href="http://www.faragostaresh.com" target="_blank">فراگسترش</a>
                 </div>
