--- a/template/layout-front.phtml
+++ b/template/layout-front.phtml
@@ -174,52 +174,52 @@ $breadcrumbs = $this->breadcrumb(
         <?php } ?>
         <div class="pi-header-body-category clearfix">
             <div class="thumbnail">
-                <a href="#" title="">
-                    <img class="img-responsive" src="<?php echo $this->assetTheme('image/europe.jpg'); ?>" alt="">
+                <a href="<?php echo Pi::url($this->url('home')); ?>/event/ecotourism" title="طبیعت گردی">
+                    <img class="img-responsive" src="<?php echo $this->assetTheme('image/ecotourism.jpg'); ?>" alt="طبیعت گردی">
                 </a>
                 <div class="caption">
                     <h3>
-                        <a href="#" title="">شاخه نمونه</a>
+                        <a href="<?php echo Pi::url($this->url('home')); ?>/event/ecotourism" title="طبیعت گردی">طبیعت گردی</a>
                     </h3>
                 </div>
             </div>
             <div class="thumbnail">
-                <a href="#" title="">
-                    <img class="img-responsive" src="<?php echo $this->assetTheme('image/asia.jpg'); ?>" alt="">
+                <a href="<?php echo Pi::url($this->url('home')); ?>/event/adventure" title="ماجراجویی">
+                    <img class="img-responsive" src="<?php echo $this->assetTheme('image/adventure.jpg'); ?>" alt="ماجراجویی">
                 </a>
                 <div class="caption">
                     <h3>
-                        <a href="#" title="">شاخه نمونه</a>
+                        <a href="<?php echo Pi::url($this->url('home')); ?>/event/adventure" title="ماجراجویی">ماجراجویی</a>
                     </h3>
                 </div>
             </div>
             <div class="thumbnail">
-                <a href="#" title="">
-                    <img class="img-responsive" src="<?php echo $this->assetTheme('image/europe.jpg'); ?>" alt="">
+                <a href="<?php echo Pi::url($this->url('home')); ?>/event/mountaineering" title="کوهنوردی">
+                    <img class="img-responsive" src="<?php echo $this->assetTheme('image/mountaineering.jpg'); ?>" alt="کوهنوردی">
                 </a>
                 <div class="caption">
                     <h3>
-                        <a href="#" title="">شاخه نمونه</a>
+                        <a href="<?php echo Pi::url($this->url('home')); ?>/event/mountaineering" title="کوهنوردی">کوهنوردی</a>
                     </h3>
                 </div>
             </div>
             <div class="thumbnail">
-                <a href="#" title="">
-                    <img class="img-responsive" src="<?php echo $this->assetTheme('image/asia.jpg'); ?>" alt="">
+                <a href="<?php echo Pi::url($this->url('home')); ?>/event/cross-country" title="صحرانوردی">
+                    <img class="img-responsive" src="<?php echo $this->assetTheme('image/cross-country.jpg'); ?>" alt="صحرانوردی">
                 </a>
                 <div class="caption">
                     <h3>
-                        <a href="#" title="">شاخه نمونه</a>
+                        <a href="<?php echo Pi::url($this->url('home')); ?>/event/cross-country" title="صحرانوردی">صحرانوردی</a>
                     </h3>
                 </div>
             </div>
             <div class="thumbnail">
-                <a href="#" title="">
-                    <img class="img-responsive" src="<?php echo $this->assetTheme('image/europe.jpg'); ?>" alt="">
+                <a href="<?php echo Pi::url($this->url('home')); ?>/event/observation" title="رصد">
+                    <img class="img-responsive" src="<?php echo $this->assetTheme('image/observation.jpg'); ?>" alt="رصد">
                 </a>
                 <div class="caption">
                     <h3>
-                        <a href="#" title="">شاخه نمونه</a>
+                        <a href="<?php echo Pi::url($this->url('home')); ?>/event/observation" title="رصد">رصد</a>
                     </h3>
                 </div>
             </div>
@@ -385,10 +385,9 @@ $breadcrumbs = $this->breadcrumb(
                         <h3>طبقه‌بندی سفرها</h3>
                         <ul class="list-unstyled">
                             <li><a title="طبیعت گردی" href="<?php echo Pi::url($this->url('home')); ?>/event/ecotourism"><i class="fa fa-angle-left"></i> طبیعت گردی</a></li>
-                            <li><a title="تاریخی" href="<?php echo Pi::url($this->url('home')); ?>/event/historical"><i class="fa fa-angle-left"></i> تاریخی</a></li>
+                            <li><a title="ماجراجویی" href="<?php echo Pi::url($this->url('home')); ?>/event/adventure"><i class="fa fa-angle-left"></i> ماجراجویی</a></li>
                             <li><a title="کوهنوردی" href="<?php echo Pi::url($this->url('home')); ?>/event/mountaineering"><i class="fa fa-angle-left"></i> کوهنوردی</a></li>
                             <li><a title="صحرانوردی" href="<?php echo Pi::url($this->url('home')); ?>/event/cross-country"><i class="fa fa-angle-left"></i> صحرانوردی</a></li>
-                            <li><a title="عکاسی" href="<?php echo Pi::url($this->url('home')); ?>/event/photography"><i class="fa fa-angle-left"></i> عکاسی</a></li>
                             <li><a title="رصد" href="<?php echo Pi::url($this->url('home')); ?>/event/observation"><i class="fa fa-angle-left"></i> رصد</a></li>
                         </ul>
                     </div>
